[package]
name = "wiki_extract"
version = "0.1.0"
edition = "2021"

[dependencies]
bzip2 = "0.4"
quick-xml = "0.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
crossbeam-channel = "0.5"
num_cpus = "1.16"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
